<resources>
    <string name="app_name">Smart App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">welcome,</string>
    <string name="tv2_screen2">This is the career ranking of the "Smart family"</string>
    <string name="tv3_screen2">president</string>
    <string name="tv4_screen2">vice\npresident</string>
    <string name="tv5_screen2">Head of sections</string>
    <string name="tv6_screen2">vice of sections</string>
    <string name="tv7_screen2">Members of sections</string>
    <string name="there_are_the_presidents">There are the presidents:-</string>
    <string name="ahmed_abubakr">Ahmed Abubakr</string>
    <string name="image">image</string>
    <string name="eslam_ali">Eslam Ali</string>
    <string name="activate_your_mind">Activate Your Mind</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="beshoy_kadous">Beshoy Kadous</string>
    <string name="hello">Hello</string>
    <string name="youstina_atef_fahim">youstina atef fahim</string>
    <string name="section_media">section media</string>
    <string name="graphic_designer">Graphic Designer</string>
    <string name="youstinaatef2021_gmail_com">youstinaatef2021@gmail.com</string>
    <string name="tena_atef">Tena atef</string>
    <string name="_01223840711">01223840711</string>
    <string name="info_tv1">أيه هيا سمارت؟</string>
    <string name="info_tv7">S_ Specific هدف محدد\n M_ Motivations عنده طموح\n A_ Applicable طموحه يكون قابل للتحقيق\n R_ Risk taker بيتحدي المخاطر\n T_ Time-oriented محدد بوقت</string>
    <string name="smart">SMART</string>
    <string name="info_tv5">طب بالنسبة لاسم</string>
    <string name="info_tv4">امتي اتأسس التيم ؟ التيم اتأسس في نوفمبر ٢٠١٨ ، أسسه البشمهندس إسلام علي أبو الفضل و انطلق من كلية الهندسة و كمان دخلنا كلية حاسبات و معلومات و في ال ٣ سنين دول قدرنا نعمل انجازات كتير</string>
    <string name="info_tv3">امتى اتاسس التيم؟</string>
    <string name="info_tv2">هو نشاط تطوعي غير هادف للربح ، هدفه انه يعمل بين الناس اللي عندهم خبرة في مجالات معينة و بين الناس اللي عايزين يتعلموا المجالات دي . اكيد سمعنا كتير كل اللي بتتعلمه في الكلية ملوش دعوة بسوق العمل ، سمارت فاميلي بقى بتشتغل على سد الفجوة بين حديثي التخرج و سوق العمل عن طريق تزويدهم بكورسات و ورش عمل في مجالات كتير لتقويتهم</string>
    <string name="please_wait">Please Wait</string>
    <string name="events_of_smart">Events of SMART</string>
    <string name="founder">Founder</string>
    <string name="president">President</string>
    <string name="mazen_osama">Mazen Osama</string>
</resources>