<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen2_1"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".ui.president.PresidentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/president_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/there_are_the_presidents"
            android:textColor="@color/gray"
            android:textSize="@dimen/president_fragment_tv1_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/president_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_9sdp"
            android:background="@drawable/text_shape"
            android:gravity="center"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/current"
            android:textColor="@color/green"
            android:textSize="@dimen/president_fragment_tv2_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/president_tv1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/president_iv2_founder"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/president_tv_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/mazen_osama"
                    android:textColor="#3a3a3a"
                    android:textSize="@dimen/president_fragment_tv_current_textSize" />

                <TextView
                    android:id="@+id/president_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/president"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:textColor="#006578"
                    android:textSize="@dimen/president_fragment_tv3_textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/president_iv_previous"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/president_tv5" />

                <TextView
                    android:id="@+id/president_tv2_founder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:letterSpacing="0.05"
                    android:text="@string/eslam_ali"
                    android:textColor="#3a3a3a"
                    android:textSize="@dimen/president_fragment_tv2_founder_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/president_iv2_founder"
                    app:layout_constraintStart_toStartOf="@+id/president_iv2_founder"
                    app:layout_constraintTop_toBottomOf="@+id/president_iv2_founder"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/president_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/founder"
                    android:textColor="#006578"
                    android:textSize="@dimen/president_fragment_tv4_textSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/president_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/text_shape"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/previous"
            android:textColor="#b00000"
            android:textSize="@dimen/president_fragment_tv5_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/president_tv3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintEnd_toStartOf="@+id/president_iv_previous"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/president_tv5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/ahmed_abubakr"
                    android:textColor="#3a3a3a"
                    android:textSize="@dimen/president_fragment_tv_current_textSize"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:text="@string/president"
                    android:textColor="#006578"
                    android:textSize="@dimen/president_fragment_tv3_textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@color/cardview_dark_background"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/president_tv5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:gravity="center"
                    android:letterSpacing="0.05"
                    android:text="@string/eslam_ali"
                    android:textColor="#3a3a3a"
                    android:textSize="@dimen/president_fragment_tv2_founder_textSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/president_iv2_founder"
                    app:layout_constraintStart_toStartOf="@+id/president_iv2_founder"
                    app:layout_constraintTop_toBottomOf="@+id/president_iv2_founder"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/founder"
                    android:textColor="#006578"
                    android:textSize="@dimen/president_fragment_tv4_textSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>